@@ -1,6 +1,7 @@
 MicroEmulator
 
 0.3.1
+- device display is better customizable
 - app: fixed NullPointerException when run ME without initial MIDlet
 
 0.3 (alpha) - 29.08.2002
